feat: implement course components with dynamic data and improve UI elements

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,3 +1,5 @@
-<h1 class="text-3xl font-bold underline text-blue-200">
-  Hello world!
-</h1>
+<app-hero></app-hero>
+<app-statistics></app-statistics>
+<app-courses-preview></app-courses-preview>
+<app-feedback></app-feedback>
+<app-testimonials></app-testimonials>
