--- a/src/app/components/courses/course-card/course-card.html
+++ b/src/app/components/courses/course-card/course-card.html
@@ -1,1 +1,18 @@
-<p>course-card works!</p>
+<div class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
+  <img [src]="course.image" alt="{{ course.title }}" class="w-full h-48 object-cover" />
+
+  <div class="p-4">
+    <h3 class="text-lg font-semibold">{{ course.title }}</h3>
+    <p class="text-sm text-gray-500 mb-2">By {{ course.instructor }}</p>
+    
+    <div class="flex items-center mb-3">
+      <span class="text-yellow-500" *ngFor="let star of [].constructor(course.rating)">★</span>
+      <span class="text-gray-400 text-sm ml-1">({{ course.reviews }} reviews)</span>
+    </div>
+
+    <div class="flex justify-between items-center">
+      <span class="text-indigo-600 font-bold">{{ course.price }}</span>
+      <a  class="text-sm text-indigo-500 hover:underline">View Course</a>
+    </div>
+  </div>
+</div>
