--- a/src/app/components/courses/course-list/course-list.html
+++ b/src/app/components/courses/course-list/course-list.html
@@ -1,1 +1,5 @@
-<p>course-list works!</p>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    @for (course of courses; track course.id) {
+        <app-course-card [course]="course"></app-course-card>
+    }
+</div>
