--- a/src/app/components/courses/course-video-player/course-video-player.html
+++ b/src/app/components/courses/course-video-player/course-video-player.html
@@ -1,1 +1,3 @@
-<p>course-video-player works!</p>
+<div class="aspect-w-16 aspect-h-9 bg-black rounded-lg overflow-hidden">
+  <iframe [src]="videoUrl" frameborder="0" allowfullscreen class="w-full h-full"></iframe>
+</div>
