--- a/src/app/components/home/hero/hero.html
+++ b/src/app/components/home/hero/hero.html
@@ -1,4 +1,4 @@
-<section class="bg-gray-50 py-16">
+<section class="bg-white py-16">
   <div class="max-w-7xl mx-auto px-6 lg:px-8 flex flex-col lg:flex-row items-center gap-10">
 
     <!-- النصوص -->
@@ -23,7 +23,7 @@
 
     <!-- الصورة -->
     <div class="flex-1">
-      <img src="assets/images/hero-illustration.svg" alt="Learning Illustration" class="w-full h-auto" />
+      <img src="assets/hero.jpg" alt="Learning Illustration" class="w-full h-auto" />
     </div>
 
   </div>
