--- a/src/app/components/home/statistics/statistics.html
+++ b/src/app/components/home/statistics/statistics.html
@@ -1,4 +1,4 @@
-<section class="bg-white py-12">
+<section class="bg-gray-50 py-12">
   <div class="max-w-7xl mx-auto px-6 lg:px-8">
     <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
 
