--- a/src/app/components/shared/navbar/navbar.html
+++ b/src/app/components/shared/navbar/navbar.html
@@ -14,10 +14,8 @@
 
       <!-- Navigation Links -->
       <div class="flex items-center space-x-6">
-        <a routerLink="/" class="text-gray-700 hover:text-indigo-600">Home</a>
-        <a routerLink="/explore" class="text-gray-700 hover:text-indigo-600"
-          >Explore</a
-        >
+        <a [routerLink]="['']" class="text-gray-700 hover:text-indigo-600">Home</a>
+        <a [routerLink]="['']" class="text-gray-700 hover:text-indigo-600">Explore</a>
 
         @if (isLoggedIn) {
         <a routerLink="/my-courses" class="text-gray-700 hover:text-indigo-600"
@@ -136,7 +134,7 @@
             class="absolute right-0 mt-2 w-48 bg-white border rounded shadow-lg z-40"
           >
             <a
-              routerLink="/profile"
+              [routerLink]="['/profile']"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-50"
               >Profile</a
             >
