--- a/src/app/components/courses/courses.html
+++ b/src/app/components/courses/courses.html
@@ -17,7 +17,7 @@
         (back)="clearSelection()">
       </app-course-details>
 
-      <app-course-video-player [videoUrl]="'/'"></app-course-video-player>
+      <app-course-video-player ></app-course-video-player>
 
       <app-course-progress [progress]="31"></app-course-progress>
     }
