--- a/src/app/components/courses/course-card/course-card.html
+++ b/src/app/components/courses/course-card/course-card.html
@@ -1,18 +1,42 @@
 <div class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-  <img [src]="course.image" alt="{{ course.title }}" class="w-full h-48 object-cover" />
+  <!-- الصورة -->
+  <img [src]="course.thumbnailURL"
+       alt="{{ course.courseTitle }}"
+       class="w-full h-48 object-cover" />
 
   <div class="p-4">
-    <h3 class="text-lg font-semibold">{{ course.title }}</h3>
-    <p class="text-sm text-gray-500 mb-2">By {{ course.instructor }}</p>
+    <!-- عنوان الكورس -->
+    <h3 class="text-lg font-semibold">{{ course.courseTitle }}</h3>
     
-    <div class="flex items-center mb-3">
-      <span class="text-yellow-500" *ngFor="let star of [].constructor(course.rating)">★</span>
-      <span class="text-gray-400 text-sm ml-1">({{ course.reviews }} reviews)</span>
-    </div>
+    <!-- اسم المحاضر -->
+    <p class="text-sm text-gray-500 mb-2">By {{ course.instructorName }}</p>
+    
+    <!-- التصنيف -->
+    <p class="text-xs text-gray-400 mb-3">Category: {{ course.categoryName }}</p>
 
+    <!-- السعر مع الخصم -->
     <div class="flex justify-between items-center">
-      <span class="text-indigo-600 font-bold">{{ course.price }}</span>
-      <a [routerLink]="['/coursevideo', course.id]" class="text-sm text-indigo-500 hover:underline">View Course</a>
+      <span class="text-indigo-600 font-bold">
+        @if(course.isDiscountValid){
+          {{ course.totalAmountAfterDiscount | currency }}
+          <span class="line-through text-gray-400 text-sm ml-1">
+            {{ course.totalAmount | currency }}
+          </span>
+      
+        } 
+        @else{
+                    {{ course.totalAmountAfterDiscount | currency }}
+
+          <span class="line-through text-gray-400 text-sm ml-1">
+            {{ course.totalAmount | currency }}
+          </span>
+        }
+      </span>
+
+      <a [routerLink]="['/coursevideo', course.id]"
+         class="text-sm text-indigo-500 hover:underline">
+        View Course
+      </a>
     </div>
   </div>
 </div>
