--- a/src/app/components/courses/courses.html
+++ b/src/app/components/courses/courses.html
@@ -1,12 +1,12 @@
 <section class="max-w-7xl mx-auto px-4 py-10 grid grid-cols-1 lg:grid-cols-4 gap-6">
   
   <!-- Filter Sidebar -->
-  <!-- <aside class="lg:col-span-1">
+  <aside class="lg:col-span-1">
     <app-filter-sidebar
-      [filters]="filters()"
+      [filters]="filters"
       (filtersChanged)="applyFilters($event)">
     </app-filter-sidebar>
-  </aside> -->
+  </aside>
 
   <!-- Courses Content -->
   <div class="lg:col-span-3 space-y-6">
