--- a/src/app/components/home/courses-preview/courses-preview.html
+++ b/src/app/components/home/courses-preview/courses-preview.html
@@ -1,18 +1,23 @@
-<section class="max-w-7xl mx-auto px-4 py-12">
+<section class="max-w-7xl mx-auto px-4 py-12 relative min-h-[200px]">
   <h2 class="text-3xl font-bold mb-8 text-center">Courses Designed for Success</h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    @for (course of courses; track course.id) {
-      <app-course-card [course]="course"></app-course-card>
-    }
-  </div>
+  @if (loading) {
+    <app-spinner [size]="90" color="text-rose-500" />
 
-  <div class="text-center mt-8">
-    <a
-      routerLink="/courses"
-      class="px-6 py-3 bg-indigo-600 text-white rounded-lg hover:bg-indigo-500"
-    >
-      Load More Courses
-    </a>
-  </div>
+  } @else {
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      @for (course of courses; track course.id) {
+        <app-course-card [course]="course"></app-course-card>
+      }
+    </div>
+
+    <div class="text-center mt-8">
+      <a
+        routerLink="/courses"
+        class="px-6 py-3 bg-indigo-600 text-white rounded-lg hover:bg-indigo-500"
+      >
+        Load More Courses
+      </a>
+    </div>
+  }
 </section>
