feat(courses): enhance filtering options by adding level and duration filters; update course card to display total amount with currency symbol

--- a/src/app/components/courses/course-card/course-card.html
+++ b/src/app/components/courses/course-card/course-card.html
@@ -18,7 +18,7 @@
     <div class="flex justify-between items-center">
       <span class="text-indigo-600 font-bold">
         @if(course.discountValue === 0){
-          {{ course.totalAmount}}
+          ${{ course.totalAmount}}
         } 
         @else{
             ${{ course.totalAmount - course.discountValue}}
